fix: arrumando doc swagger
